# ttyd-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  README.md  build_and_run.sh  build_and_run_docker.sh  build_and_run_vttest.sh
.github/: FUNDING.yml
.github/workflows/: docker-publish-arm64.yml  docker-publish-x86_64.yml  docker-publish.yml
html/: build.js  package-lock.json  package.json
html/src/: index.js  template.html  trzsz.js
src/: assets_routes.rs  main.rs  ws_handler.rs
src/assets/: index.html
