[package]
name = "ttyd-rs"
version = "0.1.0"
edition = "2024"
exclude = ["html"]

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws"] }
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.32"
futures-util = "0.3.32"
pty-process = { version = "0.5.3", features = ["async"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
uuid = { version = "1.22.0", features = ["v4", "v7"] }
